[package]
name = "libdrm-sys"
version = "0.1.5"
description = "Native bindings to the libdrm library"
repository = "https://github.com/devurandom/libdrm-sys-rs"
authors = ["Dennis Schridde <devurandom@gmx.net>"]
license = "MIT"
keywords = ["libdrm", "drm", "gpu", "linux"]
categories = ["hardware-support", "os", "rendering"]
build = "build.rs"
readme = "README.md"
license-file = "LICENSE"

[build-dependencies]
bindgen = "0.25"
pkg-config = "0.3"
